<resources>
    <!-- Strings related to Navigation Menu and Action Bar -->
    <string name="app_name">Wallet</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_settings">Settings</string>
    <string name="title_scan">Scan</string>
    <string name="title_import_seed">Import Seed</string>
    <string name="title_generate_seed">Generate Seed</string>
    <string name="title_backup_seed">Confirm Backup Seed</string>
    <string name="title_set_password">Set Password</string>
    <string name="title_confirm_tx">Confirm Transaction</string>
    <string name="title_about_us">About</string>

    <!-- Strings related to Wallet -->
    <string name="wallet_import_key">Import seed</string>
    <string name="wallet_sign_tx">Sign transaction</string>

    <string name="settings_network">Network</string>
    <string name="settings_network_testnet">Network (Testnet)</string>
    <string name="settings_network_mainnet">Network (Mainnet)</string>
    <string name="settings_network_summary">Select your wallet\'s network (Testnet or Mainnet)\n
        Cannot be changed once wallet is created</string>

    <!-- Strings related to Settings -->
    <string name="settings_account">Account Settings</string>
    <string name="settings_additional">Additional Settings</string>

    <string name="settings_export_seed">Export Seed</string>
    <string name="settings_export_seed_summary">Backup wallet in another device</string>

    <string name="settings_auto_backup">Auto Backup</string>
    <string name="settings_auto_backup_summary">Automatically backup changes to wallet</string>

    <string name="settings_connectivity">Monitor connectivity</string>
    <string name="settings_connectivity_summary">Check for wifi, data, and bluetooth</string>

    <string name="settings_about_us">About Us</string>
    <string name="settings_about_us_summary">Learn more about VEE</string>

    <!-- Strings related to Scanner -->
    <string name="scanner_tip">Align QR code within frame to scan</string>

    <!-- Strings related to Export Seed -->
    <string name="export_seed">Wallet Seed</string>
    <string name="export_seed_copy">Copy</string>
    <string name="sign_tx">Sign Transaction</string>

    <!-- Strings related to About us -->
    <string name="copyright">Copyright (c) 2018 VEE Technology LLC</string>
    <string name="version_main">VEE Cold Wallet version 0.3.0</string>
    <string name="version_test">VEE Cold Wallet version 0.3.0(for Testnet)</string>
    <string name="description">VEE Cold Wallet is a reference implementation of high security cold
        storage for the VEE blockchain network. It implements VEE wallet format specification 1.0. </string>

    <!-- Strings related to Import Seed -->
    <string name="import_seed_title_1">Method 1</string>
    <string name="import_seed_subtitle_1">Input or paste your seed like below.</string>
    <string name="import_seed_title_2">Method 2</string>
    <string name="import_seed_subtitle_2">Import your seed via QR code.</string>
    <string name="import_seed_hint">dance gaze inquiry buddy census embrace
        report wall wolf flip grant injury middle mix split</string>
    <string name="import_seed_paste">Paste</string>
    <string name="import_seed_confirm">Confirm</string>

    <!-- Strings related to Generate Seed -->
    <string name="generate_seed_title">New backup seed phrase</string>
    <string name="generate_seed_subtitle">Please carefully write down or copy
        these 15 words in a secure location for future wallet recovery</string>
    <string name="generate_seed_copy">Copy</string>
    <string name="generate_seed_confirm">Confirm</string>

    <!-- Strings related to Confirm Backup Seed -->
    <string name="confirm_backup_seed_title">Verify your seed phrase</string>
    <string name="confirm_backup_seed_subtitle">Tap each word in the correct order</string>
    <string name="confirm_backup_seed_clear">Clear</string>

    <!-- Strings related to Foreign Seed -->
    <string name="foreign_seed_title">Foreign Seed Detected</string>
    <string name="foreign_seed_subtitle">The seed phrase below is from a user-supplied source.
        An insecure entropy source can lead to total loss of the wallet. Do you wish to continue?</string>
    <string name="foreign_seed_positive_button">Continue</string>
    <string name="foreign_seed_negative_button">Back</string>

    <!-- Strings related to Signature -->
    <string name="signature_title">Validate Transaction</string>
    <string name="signature_step1">Step 1:</string>
    <string name="signature_step1_contents">Scan QR code via browser to validate signature</string>
    <string name="signature_step2">Step 2:</string>
    <string name="signature_step2_contents"> Click the button below</string>

    <!-- Strings related to Transaction -->
    <string name="transaction_title">Confirm Transaction</string>
    <string name="transaction_subtitle">Please review the following details carefully</string>
    <string name="transaction_type">Type</string>
    <string name="transaction_type_payment">Payment</string>
    <string name="transaction_type_transfer">Transfer</string>
    <string name="transaction_type_lease">Lease</string>
    <string name="transaction_type_cancel_lease">Cancel Lease</string>
    <string name="transaction_sender">Sender</string>
    <string name="transaction_recipient">Recipient</string>
    <string name="transaction_amount">Amount</string>
    <string name="transaction_fee">Fee</string>
    <string name="transaction_attachment">Attachment</string>
    <string name="transaction_timestamp">Time</string>
    <string name="transaction_confirm">Confirm</string>
    <string name="transaction_done">Back to Home</string>

    <!-- Strings related to Account Number -->
    <string name="account_number_title">Configure Wallet</string>
    <string name="account_number_subtitle">Select the number of accounts</string>
    <string name="append_account_title">Add Accounts</string>
    <string name="append_account_subtitle">Select the number of accounts</string>
    <string name="account_number_confirm">Confirm</string>

    <!-- Strings related to Floating Action Menu -->
    <string name="import_seed">Import Seed</string>
    <string name="generate_seed">Generate Seed</string>
    <string name="load_backup">Load Backup File</string>
    <string name="sign_transaction">Sign Transaction</string>
    <string name="backup_wallet">Backup Wallet</string>
    <string name="append_accounts">Add Accounts</string>
    <string name="message">Welcome to VEE Cold Wallet! Press button below to start.</string>

    <!-- Strings related to Set Password -->
    <string name="set_password_title">Password</string>
    <string name="set_password_subtitle">Please set a password for your wallet</string>
    <string name="set_password_hint_1">Set Password</string>
    <string name="set_password_hint_2">Confirm Password</string>
    <string name="set_password_confirm">Confirm</string>
    <string name="password_strength_0">None</string>
    <string name="password_strength_1">Weak</string>
    <string name="password_strength_2">Fair</string>
    <string name="password_strength_3">Good</string>
    <string name="password_strength_4">Strong</string>
    <string name="password_strength_5">Perfect</string>

    <!-- Strings related to Password Warning-->
    <string name="password_warning_title">INSUFFICIENT Password Strength</string>
    <string name="password_warning_1">TO ENSURE the safety of your wallet</string>
    <string name="password_warning_2">RATING MUST be good or above</string>
    <string name="password_warning_positive_button">Continue</string>
    <string name="password_warning_negative_button">Back</string>

    <!-- Strings related to Request Password-->
    <string name="request_password_title">Password Request</string>
    <string name="request_password_hint">Enter your password</string>
    <string name="request_password_confirm">Confirm</string>

    <!-- Strings related to First Run Warning-->
    <string name="first_run_warning_title">TO PROTECT Your Cold Wallet</string>
    <string name="first_run_warning_1">NEVER UNINSTALL the cold wallet</string>
    <string name="first_run_warning_2">NEVER CLEAR the cold wallet\'s data</string>
    <string name="first_run_warning_3">NEVER FORGET your wallet password</string>
    <string name="first_run_warning_continue">Continue</string>

    <!-- Strings related to Wrong Transaction-->
    <string name="wrong_transaction_title">CANNOT READ TRANSACTION</string>
    <string name="wrong_transaction_subtitle">Possible Reasons</string>
    <string name="wrong_transaction_reason_1_contents">Wallet is not updated to latest version</string>
    <string name="wrong_transaction_reason_2_contents">Wallet cannot find the sender\'s address</string>
    <string name="wrong_transaction_reason_3_contents">Invalid transaction format</string>
    <string name="wrong_transaction_continue">Continue</string>

    <!-- Strings related to Update App -->
    <string name="update_app_title">NEED TO UPDATE</string>
    <string name="update_app_subtitle">Please update to the latest version. </string>
    <string name="update_app_ok">OK</string>

    <!-- Strings related to Nonexistent Sender -->
    <string name="nonexistent_sender_title">CANNOT FIND SENDER</string>
    <string name="nonexistent_sender_subtitle">Your cold wallet does not contain the sender address.
        Please double check your transaction details and try again.</string>
    <string name="nonexistent_sender_ok">OK</string>

    <!-- Strings related to Monitor Connectivity-->
    <string name="monitor_connectivity_title">Current Connectivity Status</string>
    <string name="monitor_connectivity_unchecked_1">WIFI is connected</string>
    <string name="monitor_connectivity_unchecked_2">MOBILE DATA is connected</string>
    <string name="monitor_connectivity_unchecked_3">BLUETOOTH is connected</string>
    <string name="monitor_connectivity_checked_1">WIFI is unconnected</string>
    <string name="monitor_connectivity_checked_2">MOBILE DATA is unconnected</string>
    <string name="monitor_connectivity_checked_3">BLUETOOTH is unconnected</string>
    <string name="monitor_connectivity_disabled">Please disconnect networks</string>
    <string name="monitor_connectivity_refresh">Refresh</string>
    <string name="monitor_connectivity_continue">Continue</string>
</resources>
