<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_tip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textLight"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/nonexistent_sender_title"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/divider_dark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/textDark"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/nonexistent_sender_subtitle"/>

    <Button
        android:id="@+id/nonexistent_sender_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rounded_corners_orange"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/nonexistent_sender_ok" />
</LinearLayout>