<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rounded_corners">

    <ImageView
        android:id="@+id/monitor_connectivity_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_tip"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textLight"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:text="@string/monitor_connectivity_title"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/divider_dark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/monitor_connectivity_circle_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_circle_gray" />

        <TextView
            android:id="@+id/monitor_connectivity_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            android:text="@string/monitor_connectivity_unchecked_1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp">

        <ImageView
            android:id="@+id/monitor_connectivity_circle_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_circle_gray" />

        <TextView
            android:id="@+id/monitor_connectivity_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            android:text="@string/monitor_connectivity_unchecked_2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/monitor_connectivity_circle_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_circle_gray" />

        <TextView
            android:id="@+id/monitor_connectivity_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textDark"
            android:textSize="14sp"
            android:text="@string/monitor_connectivity_unchecked_3"/>
    </LinearLayout>

    <Button
        android:id="@+id/monitor_connectivity_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="gone"
        android:background="@drawable/rounded_corners_orange"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/monitor_connectivity_continue" />
</LinearLayout>