<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_corners"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_corners_light_gray">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:gravity="center"
            android:textColor="@color/textDark"
            android:textSize="20sp"
            android:text="@string/foreign_seed_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:textColor="@color/textLight"
            android:textSize="14sp"
            android:text="@string/foreign_seed_subtitle"/>
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/foreign_seed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:textColor="@color/textDark"
            android:textSize="16sp" />
    </android.support.v7.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/foreign_seed_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="32dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="32dp"
            android:text="@string/foreign_seed_negative_button"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corners_orange"/>

        <Button
            android:id="@+id/foreign_seed_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="32dp"
            android:layout_marginRight="60dp"
            android:text="@string/foreign_seed_positive_button"
            android:textSize="16sp"
            android:textColor="@color/orange"
            android:background="@drawable/rounded_corners"/>
    </LinearLayout>
</LinearLayout>